--- a/JavaScript desde cero/ProyectoFinal/index.html
+++ b/JavaScript desde cero/ProyectoFinal/index.html
@@ -4,11 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Final</title>
+    <title>Pizzeria Pepitos</title>
 </head>
 <body>
-    
-    <script src="productspage.js"></script>
-    <script src="main.js"></script>
+    <h1>Hola</h1>
+<table id="listadeusuarios">
+
+<tr>
+    <th>Nombre</th>
+    <th>Apellido</th>
+    <th>Edad</th>
+    <th>Genero</th>
+  </tr></table>
 </body>
+<script src="productspage.js"></script>
+<script src="usuarios.js"></script>
+<script src="main.js"></script>
 </html>
+
+
+
+<!-- 3. La pizzería Pepitos requiere un algoritmo que permita informarle a los usuarios si
+reciben o no un premio por parte del negocio, se tienen las siguientes
+validaciones:
+a. Si es un niño menor a 10 años, debe ir a reclamar un jugo.
+b. Si es una persona mayor de edad (18 años) debe ir a reclamar una
+cerveza.
+c. Y si es una mujer, debe reclamar adicionalmente una porción de pizza
+Hawaiana.
+d. O si es un hombre debe reclamar adicionalmente una porción de pizza tres
+carnes.
+e. Si no cumple ninguna de las condiciones, se le debe informar que
+desafortunadamente, no recibe ningún premio.
+
+4. Se necesita crear un menú de opciones, donde la persona escriba que quiere de
+comer, se le vaya sumando el valor a lo seleccionado hasta que el usuario escriba
+pagar, Una vez termine de comprar, se le debe mostrar el valor que debe pagar.
+(El menú y precios lo decide el programado@r.) -->
