--- a/BIT-Taller-JS-1/index.html
+++ b/BIT-Taller-JS-1/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- Hacer un programa que lea los nombres y las edades de varias personas (n), al finalizar el programa debe mostrar el nombre y la edad de la persona mayor, también el nombre y la edad de la persona menor. -->
-    
+<div class="resultado-personas"></div>
 </body>
+<script src="usuarios.js"></script>
+<script src="main.js"></script>
 </html>
