--- a/BIT-Taller-JS-1/Ejercicio2/index.html
+++ b/BIT-Taller-JS-1/Ejercicio2/index.html
@@ -19,7 +19,7 @@
     <div class="bg-light col-4 py-5 px-5 rounded shadow-lg border border-dark text-center">
         <div class="input-group mb-3">
             <span class="input-group-text">Ingrese la nota</span>
-            <input type="number" class="form-control" id="notamanual" required onkeypress="calcularVenta(event)">
+            <input type="number" class="form-control" id="notamanual" required onkeypress="notas(event)">
         </div>
         <hr>
         <div class="mostrarresultados">
