--- a/BIT-Taller-JS-1/Ejercicio5/index.html
+++ b/BIT-Taller-JS-1/Ejercicio5/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/676ee9172b.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-secondary vh-100 ">
 <div class="tarjetas d-flex gap-3 flex-wrap container-md mt-3">
@@ -19,10 +20,13 @@
     <div class="card" style="width: 18rem;">
         <h5 class="card-header">Vagon 1</h5>
         <div class="card-body" id="vagon1">
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Default striped example"></div>
+              </div>
             <table class="table table-hover">
                 <thead>
                   <tr>
-                    <th scope="col">ID</th>
+                    <th scope="col">Cedula</th>
                     <th scope="col">Nombre</th>
                   </tr>
                 </thead>
@@ -38,7 +42,7 @@
             <table class="table table-hover">
                 <thead>
                   <tr>
-                    <th scope="col">ID</th>
+                    <th scope="col">Cedula</th>
                     <th scope="col">Nombre</th>
                   </tr>
                 </thead>
@@ -49,20 +53,47 @@
     </div>
 </div>
  <!-- #######  COMAND CENTER  ######### -->
-<div class="d-flex justify-content-center">
-    <div class="bg-light col-4 py-5 px-5 rounded shadow-lg border border-dar mt-5">
+<div class="d-flex justify-content-center my-5 py-5">
+    <div class="card mt-5" style="width: 30rem;">
+        <h5 class="card-header text-center">Command Center Operations</h5>
+        <div class="card-body text-center" id="vagon1">
         <div class="input-group mb-3">
             <span class="input-group-text">Nombre Pasajero</span>
             <input type="text" class="form-control" id="nombreUsuarioIn" required onkeypress="nextStep(event)">
         </div>
         <div class="input-group mb-3">
-            <span class="input-group-text">Cedula Pasajero</span>
+            <span class="input-group-text">Cedula Pasajero </span>
             <input type="number" class="form-control " id="cedulaUsuarioIn" required>
         </div>
+        <div class="input-group mb-5">
+            <label class="input-group-text" for="inputGroupSelect01">Vagon</label>
+            <select class="form-select" id="inputGroupSelect01">
+              <option selected disabled value="0">Seleccione un vagon a viajar</option>
+              <option value="1">Vagon 1</option>
+              <option value="2">Vagon 2</option>
+              <option value="3">Vagon 3</option>
+            </select>
+          </div>          
         <button type="button" class="btn btn-success" onclick="subirPasajero()">Subir Pasajero</button>
         <button type="button" class="btn btn-danger" onclick="bajarPasajero()">Bajar Pasajero</button>
+        <button type="button" class="btn btn-info">Info Pasajero</button>
+        </div>
+        <div class="card-footer text-center text-muted">
+            Version 1.0 Creado por Fabian De Gouveia
+          </div>
 
     </div>
+</div>
+<button class="btn btn-warning sticky-bottom" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">Ayuda <i class="fa-solid fa-circle-question"></i></button>
+
+<div class="offcanvas offcanvas-start " data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Offcanvas with body scrolling</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <p>Try scrolling the rest of the page to see this option in action.</p>
+  </div>
 </div>
 </body>
 <script src="main.js"></script>
