--- a/BIT-Taller-JS-1/Ejercicio5/index.html
+++ b/BIT-Taller-JS-1/Ejercicio5/index.html
@@ -21,7 +21,7 @@
         <h5 class="card-header">Vagon 1</h5>
         <div class="card-body" id="vagon1">
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Default striped example"></div>
+                <div class="progress-bar vagon1p progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Default striped example"></div>
               </div>
             <table class="table table-hover">
                 <thead>
@@ -39,6 +39,9 @@
     <div class="card" style="width: 18rem;">
         <h5 class="card-header">Vagon 2</h5>
         <div class="card-body" id="vagon2">
+            <div class="progress">
+                <div class="progress-bar vagon2p progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Default striped example"></div>
+              </div>
             <table class="table table-hover">
                 <thead>
                   <tr>
