Funcion para encontrar usuario

--- a/BIT-Taller-JS-1/Ejercicio5/index.html
+++ b/BIT-Taller-JS-1/Ejercicio5/index.html
@@ -79,7 +79,7 @@
           </div>          
         <button type="button" class="btn btn-success" onclick="subirPasajero()">Subir Pasajero</button>
         <button type="button" class="btn btn-danger" onclick="bajarPasajero()">Bajar Pasajero</button>
-        <button type="button" class="btn btn-info">Info Pasajero</button>
+        <button type="button" class="btn btn-info" onclick="findpasajero()">Info Pasajero</button>
         </div>
         <div class="card-footer text-center text-muted">
             Version 1.0 Creado por Fabian De Gouveia
