--- a/BIT-Taller-JS-1/Ejercicio5/index.html
+++ b/BIT-Taller-JS-1/Ejercicio5/index.html
@@ -13,6 +13,8 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/676ee9172b.js" crossorigin="anonymous"></script>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 <body class="bg-secondary vh-100 ">
 <div class="tarjetas d-flex gap-3 flex-wrap container-md mt-3">
@@ -76,7 +78,8 @@
               <option value="2">Vagon 2</option>
               <option value="3">Vagon 3</option>
             </select>
-          </div>          
+          </div>    
+          <div class="ejemploecuentro"></div>      
         <button type="button" class="btn btn-success" onclick="subirPasajero()">Subir Pasajero</button>
         <button type="button" class="btn btn-danger" onclick="bajarPasajero()">Bajar Pasajero</button>
         <button type="button" class="btn btn-info" onclick="findpasajero()">Info Pasajero</button>
