ejercicio 5 totalmente terminado

--- a/BIT-Taller-JS-1/Ejercicio5/index.html
+++ b/BIT-Taller-JS-1/Ejercicio5/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body class="bg-secondary vh-100 ">
-<div class="tarjetas d-flex gap-3 flex-wrap container-md mt-3">
+<div class="tarjetas d-flex gap-3 flex-wrap container-fluid mt-3 justify-content-center">
     <!-- #######  VAGON 1  ######### -->
     <div class="card" style="width: 18rem;">
         <h5 class="card-header">Vagon 1</h5>
@@ -56,9 +56,161 @@
               </table>
         </div>
     </div>
+        <!-- #######  VAGON 3  ######### -->
+        <div class="card" style="width: 18rem;">
+          <h5 class="card-header">Vagon 3</h5>
+          <div class="card-body" id="vagon3">
+              <div class="progress">
+                  <div class="progress-bar vagon3p progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Default striped example"></div>
+                </div>
+              <table class="table table-hover">
+                  <thead>
+                    <tr>
+                      <th scope="col">Cedula</th>
+                      <th scope="col">Nombre</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  </tbody>
+                </table>
+          </div>
+      </div>
+          <!-- #######  VAGON 4  ######### -->
+    <div class="card" style="width: 18rem;">
+      <h5 class="card-header">Vagon 4</h5>
+      <div class="card-body" id="vagon4">
+          <div class="progress">
+              <div class="progress-bar vagon4p progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Default striped example"></div>
+            </div>
+          <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">Cedula</th>
+                  <th scope="col">Nombre</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+      </div>
+  </div>
+      <!-- #######  VAGON 5  ######### -->
+      <div class="card" style="width: 18rem;">
+        <h5 class="card-header">Vagon 5</h5>
+        <div class="card-body" id="vagon5">
+            <div class="progress">
+                <div class="progress-bar vagon5p progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Default striped example"></div>
+              </div>
+            <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">Cedula</th>
+                    <th scope="col">Nombre</th>
+                  </tr>
+                </thead>
+                <tbody>
+                </tbody>
+              </table>
+        </div>
+    </div>
+        <!-- #######  VAGON 6  ######### -->
+        <div class="card" style="width: 18rem;">
+          <h5 class="card-header">Vagon 6</h5>
+          <div class="card-body" id="vagon6">
+              <div class="progress">
+                  <div class="progress-bar vagon6p progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Default striped example"></div>
+                </div>
+              <table class="table table-hover">
+                  <thead>
+                    <tr>
+                      <th scope="col">Cedula</th>
+                      <th scope="col">Nombre</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  </tbody>
+                </table>
+          </div>
+      </div>
+    <!-- #######  VAGON 7  ######### -->
+    <div class="card" style="width: 18rem;">
+      <h5 class="card-header">Vagon 7</h5>
+      <div class="card-body" id="vagon7">
+          <div class="progress">
+              <div class="progress-bar vagon7p progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Default striped example"></div>
+            </div>
+          <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">Cedula</th>
+                  <th scope="col">Nombre</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+      </div>
+  </div>
+    <!-- #######  VAGON 8  ######### -->
+    <div class="card" style="width: 18rem;">
+      <h5 class="card-header">Vagon 8</h5>
+      <div class="card-body" id="vagon8">
+          <div class="progress">
+              <div class="progress-bar vagon8p progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Default striped example"></div>
+            </div>
+          <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">Cedula</th>
+                  <th scope="col">Nombre</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+      </div>
+  </div>
+    <!-- #######  VAGON 9  ######### -->
+    <div class="card" style="width: 18rem;">
+      <h5 class="card-header">Vagon 9</h5>
+      <div class="card-body" id="vagon9">
+          <div class="progress">
+              <div class="progress-bar vagon9p progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Default striped example"></div>
+            </div>
+          <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">Cedula</th>
+                  <th scope="col">Nombre</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+      </div>
+  </div>
+    <!-- #######  VAGON 10  ######### -->
+    <div class="card" style="width: 18rem;">
+      <h5 class="card-header">Vagon 10</h5>
+      <div class="card-body" id="vagon10">
+          <div class="progress">
+              <div class="progress-bar vagon10p progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Default striped example"></div>
+            </div>
+          <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">Cedula</th>
+                  <th scope="col">Nombre</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+      </div>
+  </div>
 </div>
  <!-- #######  COMAND CENTER  ######### -->
-<div class="d-flex justify-content-center my-5 py-5">
+<div class="d-flex justify-content-center">
     <div class="card mt-5" style="width: 30rem;">
         <h5 class="card-header text-center">Command Center Operations</h5>
         <div class="card-body text-center" id="vagon1">
@@ -77,6 +229,13 @@
               <option value="1">Vagon 1</option>
               <option value="2">Vagon 2</option>
               <option value="3">Vagon 3</option>
+              <option value="4">Vagon 4</option>
+              <option value="5">Vagon 5</option>
+              <option value="6">Vagon 6</option>
+              <option value="7">Vagon 7</option>
+              <option value="8">Vagon 8</option>
+              <option value="9">Vagon 9</option>
+              <option value="10">Vagon 10</option>
             </select>
           </div>    
           <div class="ejemploecuentro"></div>      
