align-self-start added to cards

--- a/BIT-Taller-JS-1/Ejercicio5/index.html
+++ b/BIT-Taller-JS-1/Ejercicio5/index.html
@@ -19,7 +19,7 @@
 <body class="bg-secondary vh-100 ">
 <div class="tarjetas d-flex gap-3 flex-wrap container-fluid mt-3 justify-content-center">
     <!-- #######  VAGON 1  ######### -->
-    <div class="card" style="width: 18rem;">
+    <div class="card align-self-start" style="width: 18rem;">
         <h5 class="card-header">Vagon 1</h5>
         <div class="card-body" id="vagon1">
             <div class="progress">
@@ -38,7 +38,7 @@
         </div>
     </div>
     <!-- #######  VAGON 2  ######### -->
-    <div class="card" style="width: 18rem;">
+    <div class="card align-self-start" style="width: 18rem;">
         <h5 class="card-header">Vagon 2</h5>
         <div class="card-body" id="vagon2">
             <div class="progress">
@@ -57,7 +57,7 @@
         </div>
     </div>
         <!-- #######  VAGON 3  ######### -->
-        <div class="card" style="width: 18rem;">
+        <div class="card align-self-start" style="width: 18rem;">
           <h5 class="card-header">Vagon 3</h5>
           <div class="card-body" id="vagon3">
               <div class="progress">
@@ -76,7 +76,7 @@
           </div>
       </div>
           <!-- #######  VAGON 4  ######### -->
-    <div class="card" style="width: 18rem;">
+    <div class="card align-self-start" style="width: 18rem;">
       <h5 class="card-header">Vagon 4</h5>
       <div class="card-body" id="vagon4">
           <div class="progress">
@@ -95,7 +95,7 @@
       </div>
   </div>
       <!-- #######  VAGON 5  ######### -->
-      <div class="card" style="width: 18rem;">
+      <div class="card align-self-start" style="width: 18rem;">
         <h5 class="card-header">Vagon 5</h5>
         <div class="card-body" id="vagon5">
             <div class="progress">
@@ -114,7 +114,7 @@
         </div>
     </div>
         <!-- #######  VAGON 6  ######### -->
-        <div class="card" style="width: 18rem;">
+        <div class="card align-self-start" style="width: 18rem;">
           <h5 class="card-header">Vagon 6</h5>
           <div class="card-body" id="vagon6">
               <div class="progress">
@@ -133,7 +133,7 @@
           </div>
       </div>
     <!-- #######  VAGON 7  ######### -->
-    <div class="card" style="width: 18rem;">
+    <div class="card align-self-start" style="width: 18rem;">
       <h5 class="card-header">Vagon 7</h5>
       <div class="card-body" id="vagon7">
           <div class="progress">
@@ -152,7 +152,7 @@
       </div>
   </div>
     <!-- #######  VAGON 8  ######### -->
-    <div class="card" style="width: 18rem;">
+    <div class="card align-self-start" style="width: 18rem;">
       <h5 class="card-header">Vagon 8</h5>
       <div class="card-body" id="vagon8">
           <div class="progress">
@@ -171,7 +171,7 @@
       </div>
   </div>
     <!-- #######  VAGON 9  ######### -->
-    <div class="card" style="width: 18rem;">
+    <div class="card align-self-start" style="width: 18rem;">
       <h5 class="card-header">Vagon 9</h5>
       <div class="card-body" id="vagon9">
           <div class="progress">
@@ -190,7 +190,7 @@
       </div>
   </div>
     <!-- #######  VAGON 10  ######### -->
-    <div class="card" style="width: 18rem;">
+    <div class="card align-self-start" style="width: 18rem;">
       <h5 class="card-header">Vagon 10</h5>
       <div class="card-body" id="vagon10">
           <div class="progress">
