--- a/BIT-Taller-JS-1/Ejercicio5/index.html
+++ b/BIT-Taller-JS-1/Ejercicio5/index.html
@@ -253,12 +253,23 @@
 
 <div class="offcanvas offcanvas-start " data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
   <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Offcanvas with body scrolling</h5>
+    <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Instrucciones de uso</h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
-    <p>Try scrolling the rest of the page to see this option in action.</p>
+    <p>Para subir pasajero es necesario ingresar el nombre, cedula y seleccionar el vagon a viajar</p>
+    <p>Para bajar un pasajero solo debe colocar la cedula</p>
+    <p>Para buscar un pasajero puede usar Ctrl+F, pero como somos programadores, solo ingrese la cedula y presione el boton buscar</p>
   </div>
+  <h2>Agradecimientos y tecnologias</h2>
+  <p>Gracias al profesor Julian Benavides de BIT</p>
+  <p>
+    <ul>
+      <li>HTML</li>
+      <li>Bootstrap</li>
+      <li>JavaScript</li>
+    </ul>
+  </p>
 </div>
 </body>
 <script src="main.js"></script>
